--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = OCA/website
 	url = git@github.com:OCA/website.git
 	branch = 17.0
+
+[submodule "OCA/website"]
+	path = OCA/website
+	url = git@github.com:OCA/website.git
+	branch = 17.0
