--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,8 @@
 	path = OCA/bank-statement-import
 	url = git@github.com:OCA/bank-statement-import.git
 	branch = 17.0
+
+[submodule "OCA/account-reconcile"]
+	path = OCA/account-reconcile
+	url = git@github.com:OCA/account-reconcile.git
+	branch = 17.0
